# Qwen3_5_VL_CUDA_CUSTOM

CUDA_qwen3_5-main/CUDA_qwen3_5-main/: README.md  pyproject.toml
CUDA_qwen3_5-main/CUDA_qwen3_5-main/cuda_qwen3_vl/configs/: __init__.py  config.py
CUDA_qwen3_5-main/CUDA_qwen3_5-main/cuda_qwen3_vl/csrc/: common.h  conv3d_patch_op.cpp  conv3d_patch_op.cu  cross_entropy_op.cpp  cross_entropy_op.cu  embedding_op.cpp  embedding_op.cu  flash_attention_op.cpp  flash_attention_op.cu  gelu_tanh_op.cpp  gelu_tanh_op.cu  layernorm_op.cpp  layernorm_op.cu  matmul_op.cpp  matmul_op.cu  moe_routing_op.cpp  moe_routing_op.cu  mrope_op.cpp  mrope_op.cu  residual_add_op.cpp  residual_add_op.cu  rmsnorm_op.cpp  rmsnorm_op.cu  rope_op.cpp  rope_op.cu  sigmoid_mul_op.cpp  sigmoid_mul_op.cu  softmax_op.cpp  softmax_op.cu  swiglu_op.cpp  swiglu_op.cu
CUDA_qwen3_5-main/CUDA_qwen3_5-main/cuda_qwen3_vl/kernels/: __init__.py  _loader.py  conv3d_patch.py  cross_entropy.py  embedding.py  flash_attention.py  gelu_tanh.py  layernorm.py  matmul.py  moe_routing.py  mrope.py  residual_add.py  rmsnorm.py  rope.py  sigmoid_mul.py  softmax.py  swiglu.py
CUDA_qwen3_5-main/CUDA_qwen3_5-main/cuda_qwen3_vl/loaders/: __init__.py  hf.py
CUDA_qwen3_5-main/CUDA_qwen3_5-main/cuda_qwen3_vl/models/: __init__.py  common.py  dense.py  moe.py
CUDA_qwen3_5-main/CUDA_qwen3_5-main/cuda_qwen3_vl/modules/: __init__.py  attention.py  embedding.py  linear.py  mlp.py  moe.py  norms.py  rotary.py  (+3 more)
CUDA_qwen3_5-main/CUDA_qwen3_5-main/tests/: test_kernels.py  test_models.py  test_modules.py  test_vision_tower_parity.py
(+6 files in other folders)
